--- a/index.html
+++ b/index.html
@@ -3,40 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web App mit Glücksrad</title>
+    <title>Web App - Gruppenauslosung & Glücksrad</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Willkommen zur Web App</h1>
-
-        <div class="forms">
-            <form id="student-form">
-                <input type="text" id="student-name" placeholder="Studentenname eingeben" required>
-                <button type="submit" class="btn-primary">Student hinzufügen</button>
-            </form>
-
-            <form id="item-form">
-                <input type="text" id="item-name" placeholder="Item eingeben" required>
-                <button type="submit" class="btn-primary">Item hinzufügen</button>
-            </form>
+    <div class="container mt-5">
+        <div class="text-center mb-5">
+            <h1 class="display-4 text-primary">Willkommen zur Web App</h1>
+            <p class="lead">Gruppenauslosung und Glücksrad</p>
         </div>
 
-        <div class="buttons">
-            <button id="group-draw" class="btn-secondary">Gruppenauslosung</button>
-            <button id="spin-wheel" class="btn-secondary">Glücksrad</button>
+        <div class="row justify-content-center">
+            <!-- Öğrenci Ekleme -->
+            <div class="col-md-6 mb-4">
+                <input type="text" id="student-name" class="form-control" placeholder="Öğrenci adı girin" required>
+                <button class="btn btn-primary w-100 mt-3" id="add-student">Öğrenci Ekle</button>
+            </div>
+
+            <!-- Item Ekleme -->
+            <div class="col-md-6 mb-4">
+                <input type="text" id="item-name" class="form-control" placeholder="Item adı girin" required>
+                <button class="btn btn-success w-100 mt-3" id="add-item">Item Ekle</button>
+            </div>
         </div>
 
-        <div class="lists">
-            <h2>Studenten:</h2>
-            <ul id="student-list"></ul>
-
-            <h2>Items:</h2>
-            <ul id="item-list"></ul>
+        <div class="d-flex justify-content-around mt-5">
+            <button class="btn btn-warning btn-lg" id="group-draw">Gruppenauslosung</button>
+            <button class="btn btn-info btn-lg" id="spin-wheel">Glücksrad</button>
         </div>
 
-        <div id="output"></div>
+        <div id="student-list" class="mt-5"></div>
+        <div id="item-list" class="mt-5"></div>
     </div>
 
     <script src="script.js"></script>
