--- a/gluecksrad.html
+++ b/gluecksrad.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glücksrad</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Glücksrad</h1>
-        <button id="spin" class="btn-primary">Çarkı Çevir</button>
-        <div id="wheel-result"></div>
+    <div class="container mt-5">
+        <h1 class="display-4 text-center text-info">Glücksrad</h1>
 
-        <button class="btn-secondary" onclick="window.location.href='index.html'">Ana Sayfaya Dön</button>
+        <button class="btn btn-success btn-lg" id="spin">Çarkı Çevir</button>
+        <div id="wheel-result" class="mt-4 text-center"></div>
+        
+        <button class="btn btn-secondary mt-4" onclick="window.location.href='index.html'">Ana Sayfaya Dön</button>
     </div>
 
     <script src="gluecksrad.js"></script>
