--- a/index.html
+++ b/index.html
@@ -3,37 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web App - Gruppenauslosung & Glücksrad</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Web-App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJv+FvA9ID5SvPzIm+Nuw7xPJ+K6taTfzdyh55vBz9qg6Xa9K3+MNNu76v9R" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container text-center mt-5">
-        <h1 class="display-4">Willkommen zur Web App</h1>
-        <p class="lead">Gruppenauslosung und Glücksrad</p>
+    <div class="container mt-5">
+        <h1 class="text-center">Web App</h1>
 
-        <!-- Kullanıcı Adı Girişi -->
-        <div class="mb-4">
-            <input type="text" id="student-name" class="form-control" placeholder="Öğrenci adı girin" required>
-            <button class="btn btn-primary mt-3" id="add-student">Öğrenci Ekle</button>
+        <!-- Kullanıcı adı giriş -->
+        <div class="mb-3">
+            <label for="username" class="form-label">Benutzername</label>
+            <input type="text" class="form-control" id="username">
         </div>
 
-        <!-- Item Girişi -->
-        <div class="mb-4">
-            <input type="text" id="item-name" class="form-control" placeholder="Item adı girin" required>
-            <button class="btn btn-success mt-3" id="add-item">Item Ekle</button>
+        <!-- Öğrenci ekleme -->
+        <div class="mb-3">
+            <label for="student-name" class="form-label">Öğrenci Adı</label>
+            <input type="text" class="form-control" id="student-name">
+            <button class="btn btn-primary mt-2" id="add-student">Öğrenci Ekle</button>
         </div>
-
-        <!-- Butonlar -->
-        <div class="mt-4">
-            <button class="btn btn-warning btn-lg" id="group-draw">Gruppenauslosung</button>
-            <button class="btn btn-info btn-lg" id="spin-wheel">Glücksrad</button>
-        </div>
-
-        <!-- Öğrenci ve Item Listeleri -->
         <div id="student-list" class="mt-4"></div>
+
+        <!-- Item ekleme -->
+        <div class="mb-3">
+            <label for="item-name" class="form-label">Item Adı</label>
+            <input type="text" class="form-control" id="item-name">
+            <button class="btn btn-primary mt-2" id="add-item">Item Ekle</button>
+        </div>
         <div id="item-list" class="mt-4"></div>
+
+        <!-- Gruplama ve Glücksrad -->
+        <div class="mt-5">
+            <button class="btn btn-secondary" id="grouping-btn">Gruppenauslosung</button>
+            <button class="btn btn-secondary" id="wheel-btn">Glücksrad</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
