--- a/gruppenauslosung.html
+++ b/gruppenauslosung.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gruppenauslosung</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="display-4 text-center text-primary">Gruppenauslosung</h1>
+        <h1 class="text-center">Gruppenauslosung</h1>
 
-        <form id="group-form">
-            <div class="mb-4">
-                <input type="number" id="group-size" class="form-control" placeholder="Her grupta kaç öğrenci olmalı?" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Grupları Oluştur</button>
-        </form>
+        <div class="mb-3">
+            <label for="group-size" class="form-label">Gruppengröße (Kaç kişilik gruplar olacak?)</label>
+            <input type="number" class="form-control" id="group-size">
+        </div>
 
-        <div id="groups" class="mt-5"></div>
-        
-        <button class="btn btn-secondary mt-4" onclick="window.location.href='index.html'">Ana Sayfaya Dön</button>
+        <div class="mb-3">
+            <button class="btn btn-primary" id="create-groups">Grupları Oluştur</button>
+        </div>
+
+        <div id="group-result" class="mt-4"></div>
     </div>
 
-    <script src="gruppenauslosung.js"></script>
+    <script src="grouping.js"></script>
 </body>
 </html>
