--- a/gluecksrad.html
+++ b/gluecksrad.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glücksrad</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="display-4 text-center text-info">Glücksrad</h1>
-
-        <button class="btn btn-success btn-lg" id="spin">Çarkı Çevir</button>
-        <div id="wheel-result" class="mt-4 text-center"></div>
-        
-        <button class="btn btn-secondary mt-4" onclick="window.location.href='index.html'">Ana Sayfaya Dön</button>
+    <div class="container mt-5 text-center">
+        <h1>Glücksrad</h1>
+        <div class="wheel-container">
+            <div class="wheel" id="wheel"></div>
+            <button class="btn btn-success btn-lg" id="spin">Çarkı Çevir</button>
+            <div id="wheel-result" class="mt-4"></div>
+        </div>
     </div>
 
     <script src="gluecksrad.js"></script>
