--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJv+FvA9ID5SvPzIm+Nuw7xPJ+K6taTfzdyh55vBz9qg6Xa9K3+MNNu76v9R" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -34,9 +34,9 @@
         <div id="item-list" class="mt-4"></div>
 
         <!-- Gruplama ve Glücksrad -->
-        <div class="mt-5">
-            <button class="btn btn-secondary" id="grouping-btn">Gruppenauslosung</button>
-            <button class="btn btn-secondary" id="wheel-btn">Glücksrad</button>
+        <div class="mt-5 d-flex justify-content-around">
+            <button class="btn btn-secondary btn-lg" id="grouping-btn">Gruppenauslosung</button>
+            <button class="btn btn-secondary btn-lg" id="wheel-btn">Glücksrad</button>
         </div>
     </div>
 
