--- a/grouping.html
+++ b/grouping.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gruppenauslosung</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Gruppenauslosung</h1>
 
         <div class="mb-3">
-            <label for="group-size" class="form-label">Gruppengröße (Kaç kişilik gruplar olacak?)</label>
+            <label for="group-size" class="form-label">Gruppengröße</label>
             <input type="number" class="form-control" id="group-size">
         </div>
 
