--- a/wheeld.html
+++ b/wheeld.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glücksrad</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,11 +12,11 @@
         <h1>Glücksrad</h1>
         <div class="wheel-container">
             <div class="wheel" id="wheel"></div>
-            <button class="btn btn-success btn-lg" id="spin">Çarkı Çevir</button>
+            <button class="btn btn-success btn-lg mt-3" id="spin">Çarkı Çevir</button>
             <div id="wheel-result" class="mt-4"></div>
         </div>
     </div>
 
-    <script src="gluecksrad.js"></script>
+    <script src="wheel.js"></script>
 </body>
 </html>
